--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-tooltip": "^4.2.21",
     "reactstrap": "^9.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
