--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "react-share": "^4.4.0",
     "react-simple-tooltip": "^2.6.3",
     "react-tooltip": "^4.2.21",
     "reactstrap": "^9.0.1",
