--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-simple-tooltip": "^2.6.3",
     "react-tooltip": "^4.2.21",
     "reactstrap": "^9.0.1",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
