--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "env": "^0.0.2",
+    "rc-slider": "^10.0.0-alpha.5",
     "react": "^17.0.2",
     "react-components": "^0.5.1",
     "react-dom": "^17.0.2",
