--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "env": "^0.0.2",
+    "i18next": "^21.6.14",
     "rc-slider": "^10.0.0-alpha.5",
     "react": "^17.0.2",
     "react-components": "^0.5.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
