--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.1.3",
     "env": "^0.0.2",
     "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.4.0",
     "rc-slider": "^10.0.0-alpha.5",
     "react": "^17.0.2",
     "react-components": "^0.5.1",
